<resources>
    <string name="app_name">FastFood</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="fast_food_nget_your_groceries">Fast Food!\nGet Your Groceries!</string>
    <string name="welcome_nplease_enter_your_name_and_password">Welcome!\nPlease enter your name and password:</string>
    <string name="username">Username:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="shop">Shop</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="view_cart_history">View Cart History</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="change_quantities">Change Quantities</string>
    <string name="view_items">View Items</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="checkout_page">Checkout Page</string>
    <string name="view_order">View Order</string>
    <string name="select_delivery">Select Delivery</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="create_account_username">Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="welcome_to_fast_food_ncreate_an_account">Welcome to Fast Food!\nCreate an account!</string>
    <string name="submit">Submit</string>
    <string name="type">Type:</string>
    <string name="admin_or_user">admin or user</string>
    <string name="enter_password">Enter Password</string>
    <string name="browse">Browse</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="delete_account">Delete Account</string>
    <string name="view_details">View Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_cart">View Cart</string>
    <string name="checkout">Checkout</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="in_stock">"%d in stock"</string>
    <string name="view_order_history">View Order History</string>
    <string name="order_confirmed">Order Confirmed!</string>
</resources>