<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/username"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BrowseButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/browse"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView"

        />

    <Button
        android:id="@+id/ShoppingButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/shop"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BrowseButton"

        />

    <Button
        android:id="@+id/ViewCartHistoryButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_cart_history"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ShoppingButton"

        />

    <Button
        android:id="@+id/AccountSettingsButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewCartHistoryButton"

        />

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AccountSettingsButton"

        />

    <Button
        android:id="@+id/AdminButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/admin"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LogoutButton"
        tools:visibility="visible"

        />


</androidx.constraintlayout.widget.ConstraintLayout>