<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCartActivity">

    <TextView
        android:id="@+id/ShoppingCartTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/shopping_cart"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ViewItemsButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:text="@string/view_items"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ShoppingCartTextView" />

    <Button
        android:id="@+id/ChangeQuantitiesButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="152dp"
        android:text="@string/change_quantities"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ViewItemsButton" />

    <Button
        android:id="@+id/ProceedToCheckoutButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="152dp"
        android:text="@string/proceed_to_checkout"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ChangeQuantitiesButton" />


</androidx.constraintlayout.widget.ConstraintLayout>